tests/miniJava/neg/000227_mutation.MiniJava
class java { public static void else Main ( String [ ] java ) { { } } }
